# gaia

./: .contextignore  .gitignore  CLAUDE.md  LICENSE  README.md  agent.py  app.py  config.yaml  create_vector_database.ipynb  create_vector_database.py  investigate_metadata.ipynb  main.py  processors.py  prompt.yaml  pyproject.toml  requirements.txt  states.py  tools.py  utils.py
gaia/: agent.py  utils.py
gaia/prompts/: prompt.yaml  vlm_prompt.yaml
gaia/tools/: __init__.py  basic.py  dispatcher.py  files.py  media.py  web.py
notebooks/: create_vector_database.ipynb
prompts/: prompt.yaml
scripts/: create_vector_database.py
